# Phantom-Router

./: README.md  architecture_diagram.md  cleanup.ps1
backend/: Cargo.toml  nodes.yaml
backend/src/: api.rs  context.rs  lib.rs  main.rs  simulator.rs
backend/src/api/: handlers.rs  routes.rs
backend/src/config/: mod.rs
backend/src/decision/: engine.rs  explanation.rs  mod.rs  rules.rs
backend/src/metrics/: collector.rs  exporter.rs
backend/src/predictor/: features.rs  inference.rs  mod.rs  preprocessing.rs
backend/src/router/: algorithms.rs  engine.rs  mod.rs
backend/src/state/: cluster.rs  config_state.rs  decision_history.rs  memory.rs  metrics_state.rs  mod.rs  node.rs  pool.rs  prediction.rs
backend/src/utils/: mod.rs
backend/src/websocket/: broadcaster.rs  server.rs
backend/target_check/: .rustc_info.json
backend/target_check/debug/.fingerprint/ahash-4da65bca39099b04/: lib-ahash  lib-ahash.json
backend/target_check/debug/.fingerprint/ahash-630b4c53fc08f9c5/: run-build-script-build-script-build  run-build-script-build-script-build.json
backend/target_check/debug/.fingerprint/anyhow-ef3f532a3e874254/: output-build-script-build-script-build
backend/target_check/debug/.fingerprint/atomic-waker-9ba4b8ed2584bbc5/: lib-atomic_waker  lib-atomic_waker.json
backend/target_check/debug/.fingerprint/base64ct-a713304dcc8fae01/: lib-base64ct  lib-base64ct.json
backend/target_check/debug/.fingerprint/bitflags-1b2f9bd5afc2d0a1/: lib-bitflags  lib-bitflags.json
backend/target_v4_check/: .rustc_info.json
(+217 files in other folders)
